# ChangeLog for dev-python/cffi
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cffi/ChangeLog,v 1.49 2015/03/17 08:36:07 patrick Exp $

*cffi-0.9.2 (17 Mar 2015)

  17 Mar 2015; Patrick Lauer <patrick@gentoo.org> +cffi-0.9.2.ebuild:
  Bump

*cffi-0.9.1 (11 Mar 2015)

  11 Mar 2015; Patrick Lauer <patrick@gentoo.org> +cffi-0.9.1.ebuild:
  Bump

*cffi-0.8.6-r1 (28 Feb 2015)

  28 Feb 2015; Magnus Granberg <zorry@gentoo.org> +cffi-0.8.6-r1.ebuild,
  +files/issue177_prot_exec.patch:
  Add fix for bug #525494 proc_exec on pax enable kernel

  07 Feb 2015; Agostino Sarubbo <ago@gentoo.org> cffi-0.8.6.ebuild:
  Stable for ppc, wrt bug #530592

  16 Dec 2014; Markus Meier <maekke@gentoo.org> cffi-0.8.6.ebuild:
  arm stable, bug #530592

  09 Dec 2014; Jeroen Roovers <jer@gentoo.org> cffi-0.8.6.ebuild:
  Stable for HPPA (bug #530294).

  08 Dec 2014; Agostino Sarubbo <ago@gentoo.org> cffi-0.8.6.ebuild:
  Stable for ppc64, wrt bug #530592

  02 Dec 2014; Ian Delaney <idella4@gentoo.org> cffi-0.8.6.ebuild:
  clean old impl

  01 Dec 2014; Mike Gilbert <floppym@gentoo.org> cffi-0.8.1.ebuild,
  cffi-0.8.2.ebuild, cffi-0.8.6.ebuild:
  Use in-source build to avoid a race. Reported by remi`.

  05 Nov 2014; Patrick Lauer <patrick@gentoo.org> cffi-0.8.6.ebuild:
  Stable for x86 and amd64 to make bcrypt happy

  26 Oct 2014; Fabian Groffen <grobian@gentoo.org> cffi-0.8.6.ebuild:
  Added Prefix keywords, bug #503094

  13 Aug 2014; Anthony G. Basile <blueness@gentoo.org> cffi-0.8.1.ebuild,
  cffi-0.8.2.ebuild, cffi-0.8.6.ebuild:
  Keyword ~ppc and ~ppc64, bug #503094

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> cffi-0.8.1.ebuild,
  cffi-0.8.2.ebuild, cffi-0.8.6.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*cffi-0.8.6 (08 Jul 2014)

  08 Jul 2014; Tim Harder <radhermit@gentoo.org> +cffi-0.8.6.ebuild:
  Version bump.

  23 Jun 2014; Tobias Klausmann <klausman@gentoo.org> cffi-0.8.2.ebuild: