@@ -1,14 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX issue177_prot_exec.patch 2511 SHA256 fe1e3c85836177953672746655613ada020ac48b207825cf744c8ddb1ca31e91 SHA512 70d4edc3e5f1e95dbee6772e50499f0b1e46730b5b386f58d3ce6f84a7702e67c83b2520cd1aff7cccb417f99c6211faa588d200d3f9f946de749017307ed428 WHIRLPOOL 3bac4815ccbb1c365a3e7dc1ee5b3f906a3254e301583c6f190722ab0ce7286d1d403303fffe4146d18c639a982d224b5510c29f2f9d2264cd6042056991692b
-DIST cffi-0.8.1.tar.gz 195206 SHA256 1db1eff2093e31eaaa83b274f8c6d5d2dad2908d43a301185d205e5d256d6818 SHA512 bed5cd911a58efd95721d75ff1925e210ccd9b373f8d38cc4a86ddd2b529d757390abf51bbf5b9e583f4ecdc27710560bb6c31679cd8c45d34b3562a91eac136 WHIRLPOOL eb1907e6d603749ad7717d6d211a29a2d47582d6f22bd1ed68f1c455f04b3c9d688161b70bad8653f4027a013c1dafafde7acbe83421677c8aa018400f7af791
-DIST cffi-0.8.2.tar.gz 197622 SHA256 8192393640f7bc304ce82669b35eb90592566a30abbb4924456f52079afc18e2 SHA512 13495601340244944ca5185d450e99f1f8627dbcf013bee5e1f8049572f707cce4284e2a2e1a9b609b9715065d6ffb4b3eb1d8193d6e55277f1cf73b1903a66e WHIRLPOOL ffccf9bc81e697d7de9ba2dbbccda36be9d3b80e02c99d89ee44c3bfbf76397caa48dd80b8ff0e58801af025461e458274fec8f886ec1decf72426038a75e6c0
 DIST cffi-0.8.6.tar.gz 196835 SHA256 2532d9e3af9e3c6d0f710fc98b0295b563c7f39cfd97dd2242bd36fbf4900610 SHA512 b913d459bf0d355f0cb42fa0587a940c227d6765450033b14ab4d5281173cd1875cd6872911bb4f0b567cc1c5b0ca330615ec5f6ba205b25c41b683ae8c77790 WHIRLPOOL 4a03a077f15f943e0f06acf1bc10572b19680379e36805dbfc3dfffb8a5d735d28d9bab38e2d233f3a347fc03cede8126cc2ce017c6e3a0896b9baecddfae39f
 DIST cffi-0.9.1.tar.gz 207931 SHA256 8eba3d02fd88c49774418e790f1994258666d4cbd2c064038f295fa151a88740 SHA512 8eb484256057f6cc6f12030967a433395f6c2570766aa9bfa2bcacd4181ea49e320c51b885a11f3ed85ca4c4dc7cfb939197c1ebc19effd806efbefe630e0259 WHIRLPOOL e5bb7ee41b26b78b2a0c10a64a08fc0d4ff7049ed6d365e80c11b61d8c08155681864c2911fa3286b4fe6b8a0d10483b4a8b08813f03bdf8a9e1dec97c9d635f
 DIST cffi-0.9.2.tar.gz 209160 SHA256 1988ce7ff9c64ecd5077776175e90fd8f0a8c827cb241a23647175ce08126bb2 SHA512 93371a1189955d3f794915f8e7c6f6b9ab36cd531ff0ddeeb2108364c94dbf4dbe5d7d3f75e0aa52576d1a59559c13ec3e0f68dec4d52e6221e683ac519b850c WHIRLPOOL dcdf3a35b35607a4982035e75332c0e2f87d2df5cca9df77c48c5d57cc783d341b77fd95f71681877695b03a12564f8f28717a975bd51e832f496b71f73c3736
-EBUILD cffi-0.8.1.ebuild 1076 SHA256 3a1f842574f38edf081a8f782229fee4c198409abf08474f63b56f99f8bf54c9 SHA512 34652b91d99cfbc947067acbf5706ad20d8d6dbebcb1f8de7ad3178a148f0068fcf736d8e25cd3f88f29ddf84fe6aba0354d493adfec399fe8425b208cc53369 WHIRLPOOL ba386990c7406adfcb7e1199ac42fa1a899cc25c2ad217dbfcc684aaa63878c7429081ba948933d45c2cec5baca45395fadabf333ba72955463e18660abada35
-EBUILD cffi-0.8.2.ebuild 1082 SHA256 d17d38050ffecdd9aa1ef8ae6329ac97c9cadb7bbfa7b67f503843bc18ecb656 SHA512 d58f38b48097e1940b09754902bac4426cddf4a0be50e9a0b346cf4e183e315c0f9923b3088acd8eece9081464e97e6dcf7461e76174d3503546d95713f92fc9 WHIRLPOOL da8474d46c32b1876069290ca5dae1ba385989ff8069b960c91913b16148f3823ceadd4dead94d5342cf85e996bc8d1aefaf57e72eae89fac096270d44202230
 EBUILD cffi-0.8.6-r1.ebuild 1229 SHA256 d72f48ceb0e4a421c0156e83ca3208fd8112bb9e57cad4f8fdbc8651e17cceae SHA512 731ec5d971b9cbebe70a8f1a675eac259250ce8e305469513c91d9cdbbdd26ea207ad152eea0c73fa697615b0cccc4975b413c8f02cd8313d183250ed2aacfd9 WHIRLPOOL 7c12c73dbc85882ae575ee8ea225851c298ce16c0127eef4a66c1ce74468d2f3ca90119efa92401196121d9a5299d7d2601c41a3dc92e4c64d88e1edda5e32b4
 EBUILD cffi-0.8.6.ebuild 1167 SHA256 bede33a6f20579d41752daf677aba70e3ea29dfe9d061a17cc8c8bade608a509 SHA512 ba6543dcc7d47603d8cf1ddb28de2883fe142e16007e1320e01ebb13f7208c6fde42a2327c69f151e54cfca7496ab4b068493993156938e6dcc9b6c5abacfe18 WHIRLPOOL 42dab2866b3ae59cfa77b6fe6b772c51ec22d9e9a396be905d52fccc68c96a509d4fcd270033801b3318b235f61bd2515094c45d8585392f9f6ffb60f8dea51e
 EBUILD cffi-0.9.1.ebuild 1171 SHA256 9c8248f82cfda005ceea59fda10a205b33f2e881c26c1069a0ffe41fc6dbec96 SHA512 2eb97895ab4bbc762ac754c305cd04ab4bea8bf59fcd462c60e5314ba7d4dae89ef932725a6e27b17ab2b326633b6eb1c1e3f6bb87875977acae4a44db545696 WHIRLPOOL 8786edfaf72d0b0ab3ab70b3df35bf39606d4869df86a769610d43031e9b1be3d6fd50fc91c02a8f55606da123cc3f2c2473b5a888cec7d9e5629508874d6dc2
-EBUILD cffi-0.9.2.ebuild 1171 SHA256 e3971fe492eecba4615bd9a8bfd5ba69a9907bb75727ffb2102a8adec595485d SHA512 825dbe2b344933a4665923027363fd9267e18e32a351d23bb1a40d9b8c16a97edcdcb13bb178ac9b5a580b7dbd92be09159622318fef11f650fa49b22e4c64b0 WHIRLPOOL 9919a4513f4a8cd3e9ae5ba562e2ccccee6fbace1b3b678ae9efe5c69ad15170ef6c59053a291d0382be22ac3036811e33344154e87a3dae89e6c0360e8c3ee1
-MISC ChangeLog 6649 SHA256 77307886d3613bc26e2b5a086b2e47ea3f3c9ed4bcb2c0321b1ddf627e68f6ef SHA512 658a51064cce2839e204919b473c64b12844906aab96aefcf09572db2ea7feb87fd004623554ec53ae4ea8eb69bd91eed83fc358fa2cfff374a17acbff9e6590 WHIRLPOOL eccb865d914cd8dc1ad01e4f852f1997e46764e34ead81a4e26ffe3e612ed91a2d05630ad2bbf021925dbd80d78434ce959e7e2004647b3e857d485af7e423cc
+EBUILD cffi-0.9.2.ebuild 1187 SHA256 6e554c7daabdd5a40b97c5650bee70c336f4775fe43ab6cfc8bd83ba9782610d SHA512 6e5c19c7c59cf6ab5c070747d492b8c97b54be7bc30468896aca391edb51c0c7b13b3ff9b84aef7532a609da34818b464a0d36f551831790dbeb2c7b65ef1e3e WHIRLPOOL 58d5964a2a2089bcc12a6d2b7daa2122871643980e3d81e36eb052d836c9713ea53e6776f16324f2a79b46eef6d6c2a3d4a9a69593ef3df35d134ccb39c2a91b
+MISC ChangeLog 6808 SHA256 3bf6ae78a00b35541e36134e6978f6d7a5d775daa719cbf54a5b415c46a382f1 SHA512 71918e4d950b5fb94af7d8efceedda4d10b01587e1f7b727ac47639a8e1dc9ab2e88ed88851345e523b473288e8ee16dd12ef219d7b4724a2e7251ec2c4874f1 WHIRLPOOL eddf0ed7c4c40e14ecc69747ff66f488bb5f38d69458cf45880810c27ea6ca02b09878dec35256735e6be2847382ae3848d695854c31b9459dd77cbaf6cab157
 MISC metadata.xml 227 SHA256 1e76d484d45147b1b13e20c4b24f361111b0c32973f536f1812f7109a511a254 SHA512 1ce4b99355b37566c5674c6e3c626373da74b495c04e3f17b1844cd448c999da4193ef8475e3d2413f54aeab9a5a73fb5ec31ec8da19714f94d93496a775c9f9 WHIRLPOOL 728a0330dd4542c2c0d79273d57bc3690d929218dceb4ff0a0743aeb4833162333f528707c13971a6b221cc374745d700e5b9a4385bd558eb56ab247c75b1a12
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlULcPAACgkQso7CE7gHKw0NOwCeIJNiPw1J1Bk1So2hFl1tMTG/
+5XYAoNrhvP6y7zk8z9g3MEILZRkMeCrF
+=ryzl
+-----END PGP SIGNATURE-----
