@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cffi/cffi-0.9.2.ebuild,v 1.1 2015/03/17 08:36:07 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cffi/cffi-0.9.2.ebuild,v 1.2 2015/03/20 00:59:11 idella4 Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python{2_7,3_3,3_4} )
@@ -33,6 +33,6 @@ python_test() {
 }
 
 python_install_all() {
+	use doc && local HTML_DOCS=( doc/build/html/. )
 	distutils-r1_python_install_all
-	use doc && dohtml -r doc/build/
 }
