@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/cffi
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cffi/ChangeLog,v 1.49 2015/03/17 08:36:07 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cffi/ChangeLog,v 1.50 2015/03/20 00:59:11 idella4 Exp $
+
+  20 Mar 2015; Ian Delaney <idella4@gentoo.org> -cffi-0.8.1.ebuild,
+  -cffi-0.8.2.ebuild, cffi-0.9.1.ebuild, cffi-0.9.2.ebuild:
+  rm old, tidy to doc install
 
 *cffi-0.9.2 (17 Mar 2015)
 
